--- a/src/app/random/random.component.html
+++ b/src/app/random/random.component.html
@@ -29,7 +29,7 @@
     <div>
       <div class="p-grid">
         <div class="p-col" *ngFor="let element of listUser2; index as i">
-          <table class="table">
+          <table class="table p-shadow-24">
             <tr>
               <th scope="col">gruppo {{ i + 1 }}</th>
             </tr>
