--- a/src/app/random/random.component.html
+++ b/src/app/random/random.component.html
@@ -30,7 +30,7 @@
   <div class="row">
     <div>
       <div class="p-grid">
-        <div class="p-col-3" *ngFor="let element of listUser2; index as i">
+        <div class="p-col" style="text-align: center;" *ngFor="let element of listUser2; index as i">
           <table class="table" style="width: 100%;">
             <tr>
               <th scope="col">gruppo {{ i + 1 }}</th>
